--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Robust MCP Bridge Workbench/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Robust+MCP+Bridge+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Robust_MCP_Bridge_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Robust MCP Bridge Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Robust_MCP_Bridge_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Atelier Robust MCP Bridge (2% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="../File/FreecadRobustMCPBridge.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Symbol des Arbeitsbereichs Robust MCP Bridge</figcaption></figure>
@@ -180,39 +180,38 @@
 <p><span id="Links"></span>
 </p>
 <h2><span class="mw-headline" id="Verweise">Verweise</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub-Repository</a> - Quellcode, Dokumentation und Problemverfolgung (Issue Tracker).</li>
+<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-robust-mcp-and-more/">Vollst&auml;ndige Dokumentation</a> - Vollst&auml;ndige Handb&uuml;cher, API-Referenz und Tutorials.</li>
+<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub-Repository</a> - Quellcode, Dokumentation und Problemverfolgung (Issue Tracker).</li>
 <li><a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server auf PyPI</a> - Der MCP-Client, der eine Verbindung zu dieser Br&uuml;cke (Bridge) herstellt.</li>
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165258
+Cached time: 20260114165417
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.060 seconds
-Preprocessor visited node count: 223/1000000
+CPU time usage: 0.044 seconds
+Real time usage: 0.061 seconds
+Preprocessor visited node count: 222/1000000
 Post&#8208;expand include size: 2257/2097152 bytes
 Template argument size: 760/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3286/5000000 bytes
+Unstrip post&#8208;expand size: 3290/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.140      1 -total
- 25.44%    3.089      4 Template:Code
- 16.46%    1.998      3 Template:Button
- 14.66%    1.780      3 Template:FileName
- 11.92%    1.447      5 Template:Incode
- 10.77%    1.307      1 Template:TOCright
-  9.84%    1.194      4 Template:MenuCommand
+100.00%   17.317      1 -total
+ 24.43%    4.230      4 Template:Code
+ 24.06%    4.166      4 Template:MenuCommand
+ 13.68%    2.369      1 Template:TOCright
+ 12.19%    2.111      5 Template:Incode
+ 10.93%    1.892      3 Template:Button
+  7.14%    1.236      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114165258 and revision id 1738336. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114165417 and revision id 1738338. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
