--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -25,12 +25,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p>Placeholder for an eye-catching image selected by the admins from the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewforum.php?f=24">user showcases forum</a>.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="General">General</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="User_interface">User interface</span></h2>
-</div>
+<p><span id="General"></span>
+</p>
+<h2><span class="mw-headline" id="Allgemeines">Allgemeines</span></h2>
+<p><span id="User_interface"></span>
+</p>
+<h2><span id="Benutzeroberfl.C3.A4che"></span><span class="mw-headline" id="Benutzeroberfl&auml;che">Benutzeroberfl&auml;che</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_user_interface_improvements">Further user interface improvements</span></h3>
 </div>
@@ -203,12 +203,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165451
+Cached time: 20260114165513
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.058 seconds
+CPU time usage: 0.067 seconds
+Real time usage: 0.080 seconds
 Preprocessor visited node count: 258/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -219,14 +219,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.203      1 -total
- 47.47%    2.470      2 Template:Message
- 28.14%    1.464      1 Template:VeryImportantMessage
- 20.03%    1.042      1 Template:TOCright
- 19.16%    0.997      1 Template:FileName
+100.00%    7.121      1 -total
+ 48.93%    3.484      2 Template:Message
+ 34.65%    2.467      1 Template:VeryImportantMessage
+ 32.96%    2.347      1 Template:FileName
+ 11.61%    0.827      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165451 and revision id 1738342. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165513 and revision id 1738346. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
