--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -34,12 +34,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="Further_user_interface_improvements"></span>
 </p>
 <h3><span id="Weitere_Verbesserungen_der_Benutzeroberfl.C3.A4che"></span><span class="mw-headline" id="Weitere_Verbesserungen_der_Benutzeroberfl&auml;che">Weitere Verbesserungen der Benutzeroberfl&auml;che</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Core_system_and_API">Core system and API</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Core">Core</span></h3>
-</div>
+<p><span id="Core_system_and_API"></span>
+</p>
+<h2><span class="mw-headline" id="Kernsystem_und_API">Kernsystem und API</span></h2>
+<p><span id="Core"></span>
+</p>
+<h3><span class="mw-headline" id="Kern">Kern</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table cellpadding="5">
 <tbody><tr>
@@ -203,12 +203,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165525
+Cached time: 20260114165540
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.048 seconds
-Real time usage: 0.069 seconds
+CPU time usage: 0.062 seconds
+Real time usage: 0.078 seconds
 Preprocessor visited node count: 258/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -219,14 +219,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.396      1 -total
- 40.40%    7.432      1 Template:VeryImportantMessage
- 39.59%    7.283      2 Template:Message
- 16.86%    3.101      1 Template:TOCright
- 14.04%    2.582      1 Template:FileName
+100.00%    3.353      1 -total
+ 43.10%    1.445      2 Template:Message
+ 27.77%    0.931      1 Template:VeryImportantMessage
+ 21.84%    0.732      1 Template:TOCright
+ 20.34%    0.682      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165525 and revision id 1738348. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165540 and revision id 1738352. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
