--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -57,9 +57,7 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <ul><li>The search bar in the <span typeof="mw:File"><a href="../index.php?title=Std_DlgPreferences.svg&amp;filetimestamp=20240528092445&amp;.html" class="mw-file-description"><img src="../File/Std_DlgPreferences.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_DlgPreferences.html" title="Std DlgPreferences">Preferences</a> is now able to search through tooltips, dropdown values, checkboxes and group titles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24283">Pull request #24283</a></li>
 <li>The <span typeof="mw:File"><a href="../index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="../File/Std_Measure.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Measure.html" title="Std Measure">Measure</a> tool now has the option to display the measured result of circular elements as diameter instead or radius. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24853">Pull request #24853</a></li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="API">API</span></h3>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h4><span class="mw-headline" id="Removed_Python_API">Removed Python API</span></h4>
 </div>
@@ -203,13 +201,13 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165540
+Cached time: 20260114165545
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.062 seconds
-Real time usage: 0.078 seconds
-Preprocessor visited node count: 258/1000000
+CPU time usage: 0.049 seconds
+Real time usage: 0.063 seconds
+Preprocessor visited node count: 257/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
 Highest expansion depth: 5/100
@@ -219,14 +217,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.353      1 -total
- 43.10%    1.445      2 Template:Message
- 27.77%    0.931      1 Template:VeryImportantMessage
- 21.84%    0.732      1 Template:TOCright
- 20.34%    0.682      1 Template:FileName
+100.00%    7.498      1 -total
+ 41.36%    3.101      2 Template:Message
+ 36.14%    2.710      1 Template:VeryImportantMessage
+ 17.44%    1.308      1 Template:TOCright
+ 13.09%    0.982      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165540 and revision id 1738352. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165545 and revision id 1738354. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
