--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Release notes 1.2/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Release+notes+1.2&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Release_notes_1.2.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Release notes 1.2 (100% translated)" lang="en" dir="ltr">English</a></li></ul></div>
 <div class="warning-box">FreeCAD 1.2 ist in Entwicklung, es steht noch kein Ver&ouml;ffentlichungstermin fest.</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -67,9 +67,7 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h4><span class="mw-headline" id="New_Python_API">New Python API</span></h4>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Start">Start</span></h2>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Addon_Manager">Addon Manager</span></h2>
 </div>
@@ -201,13 +199,13 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165545
+Cached time: 20260114165553
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.049 seconds
-Real time usage: 0.063 seconds
-Preprocessor visited node count: 257/1000000
+CPU time usage: 0.059 seconds
+Real time usage: 0.077 seconds
+Preprocessor visited node count: 256/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
 Highest expansion depth: 5/100
@@ -217,14 +215,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.498      1 -total
- 41.36%    3.101      2 Template:Message
- 36.14%    2.710      1 Template:VeryImportantMessage
- 17.44%    1.308      1 Template:TOCright
- 13.09%    0.982      1 Template:FileName
+100.00%   11.305      1 -total
+ 49.80%    5.630      2 Template:Message
+ 25.78%    2.914      1 Template:FileName
+ 23.46%    2.652      1 Template:VeryImportantMessage
+ 23.32%    2.636      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165545 and revision id 1738354. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165553 and revision id 1738356. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
