--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -74,9 +74,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="Assembly_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Assembly">Arbeitsbereich Assembly</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Assembly_improvements">Further Assembly improvements</span></h3>
-</div>
+<p><span id="Further_Assembly_improvements"></span>
+</p>
+<h3><span class="mw-headline" id="Weitere_Assembly-Verbesserungen">Weitere Assembly-Verbesserungen</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="BIM_Workbench">BIM Workbench</span></h2>
 </div>
@@ -199,12 +199,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165610
+Cached time: 20260114165621
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.046 seconds
-Real time usage: 0.065 seconds
+CPU time usage: 0.048 seconds
+Real time usage: 0.084 seconds
 Preprocessor visited node count: 256/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -215,14 +215,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.847      1 -total
- 60.67%    4.154      2 Template:Message
- 21.34%    1.461      1 Template:FileName
- 19.31%    1.322      1 Template:VeryImportantMessage
- 16.27%    1.114      1 Template:TOCright
+100.00%    9.078      1 -total
+ 49.77%    4.518      2 Template:Message
+ 34.75%    3.155      1 Template:VeryImportantMessage
+ 14.18%    1.287      1 Template:FileName
+ 12.66%    1.149      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165610 and revision id 1738360. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165621 and revision id 1738362. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
