--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -77,9 +77,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="Further_Assembly_improvements"></span>
 </p>
 <h3><span class="mw-headline" id="Weitere_Assembly-Verbesserungen">Weitere Assembly-Verbesserungen</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="BIM_Workbench">BIM Workbench</span></h2>
-</div>
+<p><span id="BIM_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Arbeitsbereich_BIM">Arbeitsbereich BIM</span></h2>
 <p>ToDo:
 </p>
 <ul><li><a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD/pull/24078">https://github.com/FreeCAD/FreeCAD/pull/24078</a></li>
@@ -90,9 +90,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_BIM_improvements">Further BIM improvements</span></h3>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="CAM_Workbench">CAM Workbench</span></h2>
-</div>
+<p><span id="CAM_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Arbeitsbereich_CAM">Arbeitsbereich CAM</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_CAM_improvements">Further CAM improvements</span></h3>
 </div>
@@ -199,12 +199,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165621
+Cached time: 20260114165635
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.048 seconds
-Real time usage: 0.084 seconds
+CPU time usage: 0.073 seconds
+Real time usage: 0.146 seconds
 Preprocessor visited node count: 256/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -215,14 +215,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.078      1 -total
- 49.77%    4.518      2 Template:Message
- 34.75%    3.155      1 Template:VeryImportantMessage
- 14.18%    1.287      1 Template:FileName
- 12.66%    1.149      1 Template:TOCright
+100.00%   10.949      1 -total
+ 57.93%    6.343      2 Template:Message
+ 38.68%    4.235      1 Template:FileName
+ 21.43%    2.346      1 Template:VeryImportantMessage
+ 17.82%    1.951      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165621 and revision id 1738362. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165635 and revision id 1738366. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
