--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -203,8 +203,8 @@ Cached time: 20260114165635
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.146 seconds
+CPU time usage: 0.048 seconds
+Real time usage: 0.121 seconds
 Preprocessor visited node count: 256/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -215,14 +215,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.949      1 -total
- 57.93%    6.343      2 Template:Message
- 38.68%    4.235      1 Template:FileName
- 21.43%    2.346      1 Template:VeryImportantMessage
- 17.82%    1.951      1 Template:TOCright
+100.00%   11.906      1 -total
+ 52.87%    6.295      2 Template:Message
+ 23.69%    2.820      1 Template:FileName
+ 23.57%    2.806      1 Template:VeryImportantMessage
+ 21.64%    2.576      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165635 and revision id 1738366. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165635 and revision id 1738366. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
