--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -96,9 +96,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_CAM_improvements">Further CAM improvements</span></h3>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Draft_Workbench">Draft Workbench</span></h2>
-</div>
+<p><span id="Draft_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Arbeitsbereich_Draft">Arbeitsbereich Draft</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Draft_improvements">Further Draft improvements</span></h3>
 </div>
@@ -199,12 +199,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165635
+Cached time: 20260114165643
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.048 seconds
-Real time usage: 0.121 seconds
+CPU time usage: 0.045 seconds
+Real time usage: 0.060 seconds
 Preprocessor visited node count: 256/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -215,14 +215,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.906      1 -total
- 52.87%    6.295      2 Template:Message
- 23.69%    2.820      1 Template:FileName
- 23.57%    2.806      1 Template:VeryImportantMessage
- 21.64%    2.576      1 Template:TOCright
+100.00%    8.572      1 -total
+ 42.58%    3.650      1 Template:VeryImportantMessage
+ 40.52%    3.473      2 Template:Message
+ 13.78%    1.181      1 Template:TOCright
+ 13.08%    1.121      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165635 and revision id 1738366. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165643 and revision id 1738368. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
