--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -125,9 +125,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Material_improvements">Further Material improvements</span></h3>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Mesh_Workbench">Mesh Workbench</span></h2>
-</div>
+<p><span id="Mesh_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Arbeitsbereich_Mesh">Arbeitsbereich Mesh</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Mesh_improvements">Further Mesh improvements</span></h3>
 </div>
@@ -199,12 +199,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165702
+Cached time: 20260114165711
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.074 seconds
+CPU time usage: 0.053 seconds
+Real time usage: 0.129 seconds
 Preprocessor visited node count: 256/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -215,14 +215,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.311      1 -total
- 52.67%    4.904      2 Template:Message
- 30.04%    2.797      1 Template:FileName
- 23.47%    2.185      1 Template:TOCright
- 19.39%    1.805      1 Template:VeryImportantMessage
+100.00%   18.648      1 -total
+ 50.13%    9.348      1 Template:VeryImportantMessage
+ 36.21%    6.753      2 Template:Message
+ 16.77%    3.128      1 Template:FileName
+ 11.19%    2.086      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165702 and revision id 1738372. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165710 and revision id 1738374. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
