--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -137,9 +137,9 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_OpenSCAD_improvements">Further OpenSCAD improvements</span></h3>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Part_Workbench">Part Workbench</span></h2>
-</div>
+<p><span id="Part_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Arbeitsbereich_Part">Arbeitsbereich Part</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_Part_improvements">Further Part improvements</span></h3>
 </div>
@@ -199,12 +199,12 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260114165722
+Cached time: 20260114165728
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.048 seconds
-Real time usage: 0.064 seconds
+Real time usage: 0.060 seconds
 Preprocessor visited node count: 256/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
@@ -215,14 +215,14 @@ Unstrip post&#8208;expand size: 676/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.107      1 -total
- 44.98%    3.197      2 Template:Message
- 34.15%    2.427      1 Template:VeryImportantMessage
- 19.15%    1.361      1 Template:FileName
- 17.46%    1.241      1 Template:TOCright
+100.00%    7.001      1 -total
+ 56.08%    3.926      2 Template:Message
+ 21.98%    1.539      1 Template:VeryImportantMessage
+ 21.00%    1.470      1 Template:FileName
+ 17.80%    1.246      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165721 and revision id 1738376. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114165728 and revision id 1738378. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
